--- a/src/app/components/actividades/activity-5/activity-5.component.css
+++ b/src/app/components/actividades/activity-5/activity-5.component.css
@@ -30,23 +30,82 @@ p {
   
   
   .container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: justify;
-      position: relative;
-      height: auto;
-      width: auto;
-      background-color: #ffffff;/* Color de fondo ligero para el área alrededor del video */
-      padding: 20px;
-      box-shadow: 
-      0px 3px 0 5px rgb(177, 176, 176);/* Sombra sutil alrededor del contenedor */
-      border-radius: 10px; /* Bordes redondeados */
-      box-sizing: border-box;
-      font-size: 2em;
-      font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-      line-height: 1.2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: justify;
+    position: relative;
+    height: auto;
+    width: 100%;
+    max-height: 600px;
+    max-width: 600px; /* Permite que el contenedor se reduzca en pantallas más pequeñas */
+    background-color: #ffffff;
+    padding: 1em; /* Usar em para que el padding sea relativo al tamaño de la fuente */
+    box-shadow: 0px 3px 0 5px rgb(177, 176, 176);
+    border-radius: 10px;
+    font-size: 2em;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    line-height: 1.2;
+}
+
+/* Media queries para ajustar el contenedor en pantallas más pequeñas */
+@media (max-width: 600px) {
+    .container {
+        font-size: 1.5em; /* Reducir el tamaño de fuente en pantallas más pequeñas */
+        padding: 0.5em; /* Ajustar el padding */
+        max-width: 60%; /* Más flexibilidad en el ancho */
+        height: 100%;
     }
+
+    .center{
+      font-size: 1em; /* Reducir el tamaño de fuente en pantallas más pequeñas */
+      padding: 0.5em; /* Ajustar el padding */
+      max-width: 60%; /* Más flexibilidad en el ancho */
+      height: 100%;
+    }
+
+    .center-back{
+      font-size: 1em; /* Reducir el tamaño de fuente en pantallas más pequeñas */
+      padding: 0.5em; /* Ajustar el padding */
+      max-width: 60%; /* Más flexibilidad en el ancho */
+      height: 100%;
+    }
+
+    .container-img{
+      width: 50%;
+      margin-top: -200px;
+    }
+
+    .historia-imagen img{
+      width: 300px;
+    }
+}
+
+@media (max-width: 400px) {
+    .container {
+        font-size: 1.2em; /* Reducir aún más el tamaño de fuente */
+        padding: 0.25em; /* Más ajuste en el padding */
+        max-width: 45%; /* Permitir que el contenedor ocupe todo el ancho disponible */
+    }
+
+    .center {
+      font-size: 0.5em; /* Reducir aún más el tamaño de fuente */
+      padding: 0.2em; /* Más ajuste en el padding */
+      max-width: 40%; /* Permitir que el contenedor ocupe todo el ancho disponible */
+  }
+
+  .center-back {
+    font-size: 0.5em; /* Reducir aún más el tamaño de fuente */
+    padding: 0.2em; /* Más ajuste en el padding */
+    max-width: 40%; /* Permitir que el contenedor ocupe todo el ancho disponible */
+}
+
+  .historia-imagen{
+    width: 80%;
+  }
+
+}
+
     
   
     .reduce-top-margin {
@@ -55,29 +114,29 @@ p {
     
   
     .center {
-      width: 700px; /* Ancho automático para ocupar todo el ancho disponible */
-      height: 60px; /* Ajusta la altura según sea necesario */
-      background-color: #57c95b; /* Color verde */
-      border: none; /* Quita el borde */
-      border-radius: 20px; /* Hace que el botón sea ovalado */
+      width: 700px; /* Ancho fijo */
+      height: 100%; /* Altura fija */
+      max-height: 80px;
+      background-color: #57c95b; /* Color de fondo */
+      border: none; /* Sin borde */
+      border-radius: 20px; /* Bordes redondeados */
       color: white; /* Color del texto */
-      text-align: center; /* Centra el texto horizontalmente */
-      text-decoration: none; /* Quita la subrayado del texto */
-      display: flex; /* Usa flexbox para centrar horizontalmente */
-      align-items: center; /* Centra verticalmente el contenido */
-      justify-content: center; /* Centra horizontalmente el contenido */
-      font-size: 20px; /* Tamaño de la fuente */
+      text-align: center; /* Texto centrado horizontalmente */
+      text-decoration: none; /* Sin subrayado */
+      display: flex; /* Flexbox para centrar */
+      align-items: center; /* Centrado vertical */
+      justify-content: center; /* Centrado horizontal */
+      font-size: 1.2em; /* Tamaño de la fuente */
       cursor: pointer; /* Cambia el cursor al pasar sobre el botón */
-      outline: none; /* Quita el contorno al hacer clic en el botón */
-      padding: 0 20px; /* Añade relleno horizontal para que el texto no esté demasiado pegado a los bordes */
-      margin: 0 auto; /* Centra el botón horizontalmente */
+      outline: none; /* Sin contorno al hacer clic */
+      padding: 0.5em; /* Padding */
+      margin: 0 auto; /* Centra horizontalmente */
       margin-top: 30px;
       margin-bottom: 10px;
       font-family: Helvetica, sans-serif; /* Tipo de letra */
-      box-shadow: 
-      0px 2px 0px 4px #2faf35; 
+      box-shadow: 0px 2px 0px 4px #2faf35; 
       transition: transform 0.3s ease 0s;
-    }
+  }
     
     
     .center:hover {
@@ -114,69 +173,28 @@ p {
     }
 
     .contenedor{
-      width: 100%;
       justify-content: center;
       align-items: center;
       text-align: center;
     }
 
     .contenedor2{
-      display: block;
       justify-content: center;
       align-items: center;
       text-align: center;
+      transform: translateY(-1500px);
     }
 
-
-    .container2 {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      width: 300px; /* Ancho automático para ocupar todo el ancho disponible */
-      height: 40px; /* Ajusta la altura según sea necesario */
-      max-width: 400px;
-      max-height: 200px;
-      background-color: #ffffff;/* Color de fondo ligero para el área alrededor del video */
-      box-shadow: 
-      0px 3px 0 5px rgb(177, 176, 176);/* Sombra sutil alrededor del contenedor */
-      border-radius: 10px; /* Bordes redondeados */
-      box-sizing: border-box;
-      font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-      line-height: 1.2;
-      padding: 0 10px; /* Añade relleno horizontal para que el texto no esté demasiado pegado a los bordes */
-      margin: 0 auto; /* Centra el botón horizontalmente */
-      margin-top: 20px;
-      font-size: 20px;
-    }
-
-    .container3 {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      width: auto;
-      height: auto;/* Ancho automático para ocupar todo el ancho disponible *//* Ajusta la altura según sea necesario */
-      max-width: 400px;
-      max-height: 200px;
-      background-color: #ffffff;/* Color de fondo ligero para el área alrededor del video */
-      box-shadow: 
-      0px 3px 0 5px rgb(177, 176, 176);/* Sombra sutil alrededor del contenedor */
-      border-radius: 10px; /* Bordes redondeados */
-      box-sizing: border-box;
-      font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-      line-height: 1.2;
-      padding: 0 20px; /* Añade relleno horizontal para que el texto no esté demasiado pegado a los bordes */
-      margin: 0 auto; /* Centra el botón horizontalmente */
-      margin-top: 10px;
-      font-size: 20px;
-    }
 
     .historia-imagen {
-      max-width: 100%;
+      width: 100%;
       height: auto;
       display: block;
-      margin: 0 auto;
+    }
+
+    .historia-imagen img{
+      height: 100%;
+      width: 200%;
     }
 
 
@@ -185,10 +203,9 @@ p {
       justify-content: center;
       align-items: center;
       text-align: center;
-      width: auto;
+      width: 100%;
       height: auto;/* Ancho automático para ocupar todo el ancho disponible *//* Ajusta la altura según sea necesario */
-      max-width: 500px;
-      max-height: 600px;
+      max-width: 350px;
       background-color: #ffffff;/* Color de fondo ligero para el área alrededor del video */
       box-shadow: 
       0px 3px 0 5px rgb(177, 176, 176);/* Sombra sutil alrededor del contenedor */
@@ -237,3 +254,58 @@ p {
     .center-back:active {
       background-color: #793636; /* Cambia el color de fondo cuando se hace clic en el botón */
     }
+
+
+    .flex{
+      display: flex;
+    }
+
+
+    .container-fin {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: justify;
+      position: relative;
+      height: auto;
+      width: 100%;
+      max-height: 600px;
+      max-width: 400px; /* Permite que el contenedor se reduzca en pantallas más pequeñas */
+      background-color: #ffffff;
+      padding: 1em; /* Usar em para que el padding sea relativo al tamaño de la fuente */
+      box-shadow: 0px 3px 0 5px rgb(177, 176, 176);
+      border-radius: 10px;
+      font-size: 2em;
+      font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+      line-height: 1.2;
+  }
+
+
+
+
+
+  .center-fin {
+    width: 700px; /* Ancho fijo */
+    height: 100%; /* Altura fija */
+    max-height: 60px;
+    background-color: #57c95b; /* Color de fondo */
+    border: none; /* Sin borde */
+    border-radius: 20px; /* Bordes redondeados */
+    color: white; /* Color del texto */
+    text-align: center; /* Texto centrado horizontalmente */
+    text-decoration: none; /* Sin subrayado */
+    display: flex; /* Flexbox para centrar */
+    align-items: center; /* Centrado vertical */
+    justify-content: center; /* Centrado horizontal */
+    font-size: 1.2em; /* Tamaño de la fuente */
+    cursor: pointer; /* Cambia el cursor al pasar sobre el botón */
+    outline: none; /* Sin contorno al hacer clic */
+    padding: 0.5em; /* Padding */
+    margin: 0 auto; /* Centra horizontalmente */
+    margin-top: 30px;
+    margin-bottom: 10px;
+    font-family: Helvetica, sans-serif; /* Tipo de letra */
+    box-shadow: 0px 2px 0px 4px #2faf35; 
+    transition: transform 0.3s ease 0s;
+}
+  
