--- a/src/app/components/actividades/nombre-captura/nombre-captura.component.css
+++ b/src/app/components/actividades/nombre-captura/nombre-captura.component.css
@@ -34,18 +34,17 @@ p {
       justify-content: center;
       align-items: center;
       text-align: justify;
-      position: relative;
       height: auto;
-      width: auto;
+      width: 300px;
       background-color: #ffffff;/* Color de fondo ligero para el área alrededor del video */
-      padding: 20px;
+      padding: 15px;
       box-shadow: 
       0px 3px 0 5px rgb(177, 176, 176);/* Sombra sutil alrededor del contenedor */
       border-radius: 10px; /* Bordes redondeados */
-      box-sizing: border-box;
+
       font-size: 2em;
       font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-      line-height: 1.2;
+      line-height: 1.0;
     }
     
   
@@ -113,6 +112,8 @@ p {
       font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
       color: rgb(0, 0, 0);
       margin-bottom: 40px;
+      display: flex;
+      margin-top: 100px;
     }
 
     .contenedor{
@@ -130,21 +131,6 @@ p {
     }
 
 
-    .container2 {
+    .flex{
       display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      width: 300px; /* Ancho automático para ocupar todo el ancho disponible */
-      height: 40px; /* Ajusta la altura según sea necesario */
-      max-width: 300px;
-      background-color: #ffffff;/* Color de fondo ligero para el área alrededor del video */
-      box-shadow: 
-      0px 3px 0 5px rgb(177, 176, 176);/* Sombra sutil alrededor del contenedor */
-      border-radius: 10px; /* Bordes redondeados */
-      box-sizing: border-box;
-      font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-      line-height: 1.2;
-      padding: 0 20px; /* Añade relleno horizontal para que el texto no esté demasiado pegado a los bordes */
-      margin: 0 auto; /* Centra el botón horizontalmente */
     }
