--- a/src/app/components/actividades/activity-3/activity-3.component.css
+++ b/src/app/components/actividades/activity-3/activity-3.component.css
@@ -33,7 +33,7 @@ html, body {
     height: 100%;
     max-width: 400px; /* Ancho del botón */
     max-height: 300px; /* Altura del botón */
-    padding: 30px; /* Espaciado alrededor de la imagen dentro del botón */
+    padding: 10px; /* Espaciado alrededor de la imagen dentro del botón */
     margin-right: 10px;
     margin-left: 10px;
     background-color: #ffffff;
@@ -46,10 +46,18 @@ html, body {
   .image-button:hover {
     transform: translateY(-10px);
   }
+
+  .buttonimg{
+    width: 100%; /* La imagen ocupa todo el ancho del botón */
+    height: 100%;
+    max-width: 500px; /* Ancho del botón */
+    max-height: 300px; /* Altura del botón */
+    
+  }
   
-  .image-button img {
-    width: 80%; /* La imagen ocupa todo el ancho del botón */
-    height: 80%; /* La imagen ocupa todo el alto del botón */
+  .buttonimg img {
+    width: 100%; /* La imagen ocupa todo el ancho del botón */
+    height: 100%; /* La imagen ocupa todo el alto del botón */
   }
   
   
